--- a/frontend/src/components/Features/features.css
+++ b/frontend/src/components/Features/features.css
@@ -28,17 +28,29 @@
 
 .feature-title {
   font-weight: 700;
-  font-size: 0.95rem;
+  font-size: 1.3rem;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .feature-desc {
   color: rgba(0, 0, 0, 0.55);
   margin: 0;
+  text-align: center;
+  font-size: 1.2rem;
 }
 
+.card-title-f{
+  height: 50px !important;
+  font-size: 1.4rem !important;
+}
+
+.card-text {
+  height: 50px !important;
+  font-size: 1rem !important;
+}
 /*scroll-reveal*/
 .reveal { 
     opacity: 0; 
